# spark_cluster_manager

./: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: docker-publish.yaml  test.yml
kubernetes/: configmap.yaml
src/: main.py  spark_manager.py
src/cdm_kube_spark_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/routes/: clusters.py  health.py
src/service/: kb_auth.py  models.py
src/templates/: spark_master_deployment.yaml  spark_master_service.yaml  spark_worker_deployment.yaml
tests/: conftest.py  test_jinja_templates.py  test_main.py  test_spark_manager.py  test_template_utils.py
tests/routes/: test_clusters.py  test_health.py
tests/service/: test_app_state.py  test_arg_checkers.py  test_config.py  test_dependencies.py  test_error_mapping.py  test_errors.py  test_exception_handlers.py  test_exceptions.py  test_http_bearer.py  test_kb_auth.py  test_models.py
