[project]
name = "cdm-kube-spark-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn==0.42.0",
    "kubernetes==35.0.0",
    "python-dotenv==1.2.2",
    "pydantic==2.12.5",
    "httpx==0.28.1",
    "pyyaml==6.0.3",
    "jinja2==3.1.6",
    "aiohttp==3.13.5",
    "cacheout==0.16.0",
    "pydantic-settings==2.13.1",
]

[dependency-groups]
dev = [
    "ipython==9.12.0",
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "pytest-env==1.6.0",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
    "respx==0.23.1",
    "ruff==0.15.8",
]

[tool.pytest_env]
KUBE_SPARK_MANAGER_NAMESPACE = "default"
KUBE_NAMESPACE = "test-namespace"
SPARK_IMAGE = "spark:test"
BERDL_POSTGRES_USER = "test_user"
BERDL_POSTGRES_PASSWORD = "test_password"
BERDL_POSTGRES_DB = "test_db"
BERDL_POSTGRES_URL = "postgresql://test_user:test_password@localhost:5432/test_db"
BERDL_REDIS_HOST = "localhost"
BERDL_REDIS_PORT = "6379"
BERDL_HIVE_METASTORE_URI = "thrift://localhost:9083"
BERDL_DELTALAKE_WAREHOUSE_DIRECTORY_PATH = "s3://test-bucket/warehouse"
SPARK_MASTER_PORT = "7077"
SPARK_MASTER_WEBUI_PORT = "8080"
DEFAULT_SPARK_WORKER_CORES = "2"
DEFAULT_SPARK_WORKER_MEMORY = "2g"
SPARK_WORKER_PORT = "7078"
SPARK_WORKER_WEBUI_PORT = "8081"
BERDL_TOLERATIONS = "dev"

[tool.coverage.run]
relative_files = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2